<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyTeam</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_user_hint">请输入账号</string>
    <string name="login_user_passwd_hint">请输入密码</string>
    <string name="login_login_btn">登陆</string>
    <string name="login_signup">注册</string>
    <string name="regist_phone_hint">请输入手机号</string>
    <string name="regist_next_btn_string">下一步</string>
    <string name="regist_phone_code">验证码</string>
    <string name="regist_next_bt_send">发送</string>

</resources>