<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009966"
    android:orientation="vertical"
    android:padding="16dp" >

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/login_username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:hint="@string/login_user_hint"
        android:singleLine="true"
        android:textColor="#222222"
        android:typeface="sans" />

    <EditText
        android:id="@+id/login_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:hint="@string/login_user_passwd_hint"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#222222" />

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_login"
        android:text="@string/login_login_btn"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login_signup"
        android:textColor="#555"
        android:textStyle="bold" />

</LinearLayout>